force-app/main/default/objects/Genability_Monthly_Limit__c/Genability_Monthly_Limit__c.object-meta.xml
<CustomObject>
    <label>Genability Monthly Limit</label>
    <nameField>
        <label>Genability Monthly Limit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genability Monthly Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>