force-app/main/default/objects/Genability_Monthly_Limit__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <formula>Start_Date__c &lt;= TODAY() &amp;&amp; End_Date__c &gt;= TODAY()</formula>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>