force-app/main/default/objects/Genability_Monthly_Limit__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>LPAD(TEXT(MONTH(Start_Date__c)), 2, &apos;0&apos;)</formula>
    <label>Month</label>
    <type>Text</type>
</CustomField>