force-app/main/default/objects/Genability_Monthly_Limit__c/fields/Standard_Storage_Accounts_Limit__c.field-meta.xml
<CustomField>
    <fullName>Standard_Storage_Accounts_Limit__c</fullName>
    <label>Standard Storage Accounts Limit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>