force-app/main/default/objects/Genability_Monthly_Limit__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>TEXT(YEAR(Start_Date__c))</formula>
    <label>Year</label>
    <type>Text</type>
</CustomField>